// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should open and close the menu 1`] = `
.c0 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c0 :hover,
.c0 :active,
.c0 :focus {
  text-decoration: underline;
}

.c1 {
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  color: rgb(0, 0, 0);
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.c1 :first-of-type {
  margin-top: 0px;
}

.c1 :hover,
.c1 :active {
  color: rgb(0, 104, 69);
}

.emotion-0 {
  position: fixed;
  z-index: 50;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 0.375rem;
  border-bottom-right-radius: 0.125rem;
  border-top-left-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: visible;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  height: 100vh;
  width: 100vw;
  background-color: transparent;
  visibility: hidden;
  left: 100%;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
  width: 18rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),0 1px 2px -1px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  visibility: hidden;
  right: -20rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
  border-radius: 0.375rem;
  border-bottom-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  padding: 0.5rem;
  visibility: visible;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Avaa valikko"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="false"
    class="emotion-4"
  >
    <button
      aria-label="Sulje valikko"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 384 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
        />
      </svg>
    </button>
    <a
      class="c0 c1"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c0 c1"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c0 c1"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-7"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render 1`] = `
.c0 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c0 :hover,
.c0 :active,
.c0 :focus {
  text-decoration: underline;
}

.c1 {
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  color: rgb(0, 0, 0);
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.c1 :first-of-type {
  margin-top: 0px;
}

.c1 :hover,
.c1 :active {
  color: rgb(0, 104, 69);
}

.emotion-0 {
  position: fixed;
  z-index: 50;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 0.375rem;
  border-bottom-right-radius: 0.125rem;
  border-top-left-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: visible;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  height: 100vh;
  width: 100vw;
  background-color: transparent;
  visibility: hidden;
  left: 100%;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
  width: 18rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),0 1px 2px -1px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  visibility: hidden;
  right: -20rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
  border-radius: 0.375rem;
  border-bottom-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  padding: 0.5rem;
  visibility: visible;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Avaa valikko"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="false"
    class="emotion-4"
  >
    <button
      aria-label="Sulje valikko"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 384 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
        />
      </svg>
    </button>
    <a
      class="c0 c1"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c0 c1"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c0 c1"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-7"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render front page 1`] = `
.c0 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c0 :hover,
.c0 :active,
.c0 :focus {
  text-decoration: underline;
}

.c1 {
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  color: rgb(0, 0, 0);
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.c1 :first-of-type {
  margin-top: 0px;
}

.c1 :hover,
.c1 :active {
  color: rgb(0, 104, 69);
}

.emotion-0 {
  position: fixed;
  z-index: 50;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 0.375rem;
  border-bottom-right-radius: 0.125rem;
  border-top-left-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: visible;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  height: 100vh;
  width: 100vw;
  background-color: transparent;
  visibility: hidden;
  left: 100%;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
  width: 18rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),0 1px 2px -1px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  visibility: hidden;
  right: -20rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
  border-radius: 0.375rem;
  border-bottom-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  padding: 0.5rem;
  visibility: hidden;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Avaa valikko"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="false"
    class="emotion-4"
  >
    <button
      aria-label="Sulje valikko"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 384 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
        />
      </svg>
    </button>
    <a
      class="c0 c1"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c0 c1"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c0 c1"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-7"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;

exports[`<Header /> should render opened menu 1`] = `
.c0 {
  color: rgb(90, 94, 0);
  text-decoration: none;
  transition-property: color,background-color,border-color,text-decoration-color,fill,stroke,opacity,box-shadow,transform,filter,backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.c0 :hover,
.c0 :active,
.c0 :focus {
  text-decoration: underline;
}

.c1 {
  width: 100%;
  padding-left: 2rem;
  margin-top: 1.5rem;
  color: rgb(0, 0, 0);
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.c1 :first-of-type {
  margin-top: 0px;
}

.c1 :hover,
.c1 :active {
  color: rgb(0, 104, 69);
}

.emotion-0 {
  position: fixed;
  z-index: 50;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  box-sizing: border-box;
  border-radius: 0.375rem;
  border-bottom-right-radius: 0.125rem;
  border-top-left-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  transition-property: all;
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 300ms;
  visibility: hidden;
}

.emotion-2 {
  height: 2rem;
  width: 2rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: absolute;
  top: 0px;
  height: 100vh;
  width: 100vw;
  background-color: transparent;
  visibility: visible;
  left: 0px;
}

.emotion-4 {
  position: fixed;
  top: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100vh;
  width: 18rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  --tw-bg-opacity: 0.9;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1),0 1px 2px -1px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color),0 1px 2px -1px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  transition-duration: 300ms;
  visibility: visible;
  right: 0px;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 3rem;
  width: 3rem;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-7 {
  grid-column-start: 3;
  font-family: "Signika Negative";
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 700;
  border-radius: 0.375rem;
  border-bottom-left-radius: 0.125rem;
  border-top-right-radius: 0.125rem;
  --tw-bg-opacity: 0.75;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  padding: 0.5rem;
  visibility: visible;
}

<header
  class="emotion-0"
>
  <button
    aria-label="Avaa valikko"
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 448 512"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"
      />
    </svg>
  </button>
  <button
    aria-hidden="true"
    class="emotion-3"
  />
  <nav
    aria-expanded="true"
    class="emotion-4"
  >
    <button
      aria-label="Sulje valikko"
      class="emotion-5"
    >
      <svg
        aria-hidden="true"
        class="emotion-2"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 384 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
        />
      </svg>
    </button>
    <a
      class="c0 c1"
      href="/minusta/"
    >
      Minusta
    </a>
    <a
      class="c0 c1"
      href="/blogi/"
    >
      Blogi
    </a>
    <a
      class="c0 c1"
      href="/ota-yhteytta/"
    >
      Ota yhteyttä
    </a>
  </nav>
  <h2
    class="emotion-7"
    id="lauri-lavanti"
  >
    Lauri Lavanti
  </h2>
</header>
`;
